bazel_skylib_gazelle_plugin

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -38,7 +38,7 @@ bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
 bazel_dep(name = "aspect_rules_js", version = "2.8.2")
 bazel_dep(name = "aspect_rules_lint", version = "1.10.2")
 bazel_dep(name = "aspect_rules_py", version = "1.6.6")
-bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1")
+bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2")
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
 bazel_dep(name = "build_stack_rules_proto", version = "4.1.2")
@@ -90,7 +90,7 @@ bazel_dep(name = "toolchains_llvm", version = "0.10.3")
 #     - linting: https://github.com/aspect-build/rules_lint/blob/v1.0.3/docs/linting.md
 #     - formatting: https://github.com/aspect-build/rules_lint/blob/v1.0.3/docs/formatting.md
 # - aspect_rules_py: https://registry.bazel.build/modules/aspect_rules_py
-# - bazel_skylib_gazelle_plugin
+# - bazel_skylib_gazelle_plugin: https://registry.bazel.build/modules/bazel_skylib_gazelle_plugin
 # - bazel_skylib
 #   - Bazel rule helpers, including testing
 # - buildifier_prebuilt
