--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -42,7 +42,7 @@ bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2")
 bazel_dep(name = "bazel_skylib", version = "1.8.2")
 bazel_dep(name = "buildifier_prebuilt", version = "8.2.1")
 bazel_dep(name = "build_stack_rules_proto", version = "4.1.2")
-bazel_dep(name = "catch2", version = "3.6.0")
+bazel_dep(name = "catch2", version = "3.11.0")
 bazel_dep(name = "emboss", repo_name = "com_google_emboss")
 bazel_dep(name = "freertos", version = "10.5.1.bcr.2")
 bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
@@ -100,13 +100,13 @@ bazel_dep(name = "toolchains_llvm", version = "0.10.3")
 #     WORKSPACE, but it is incompatible with bzlmod Go toolchains. Instead let's just use
 #     a prebuilt version.
 # - build_stack_rules_proto: https://registry.bazel.build/modules/build_stack_rules_proto
-# - catch2
+# - catch2: https://registry.bazel.build/modules/catch2
 #   - C++ Test framework
 #   - https://github.com/catchorg/Catch2
 #   - Consider adding listeners via https://github.com/catchorg/Catch2/blob/devel/docs/event-listeners.md
 #   - Consider the googletest alternative: https://google.github.io/googletest/
 #     - bazel_dep(name = "googletest", version = "1.15.2")
-# - emboss
+# - emboss: https://pigweed.googlesource.com/third_party/github/google/emboss
 # - freertos
 # - gazelle: https://github.com/bazel-contrib/bazel-gazelle
 # - hedron_compile_commands
