--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -50,7 +50,7 @@ bazel_dep(name = "hedron_compile_commands")
 bazel_dep(name = "nanopb", version = "0.4.9.1", repo_name = "com_github_nanopb_nanopb")
 bazel_dep(name = "pico-sdk", version = "2.0.0")
 bazel_dep(name = "pigweed")
-bazel_dep(name = "platforms", version = "0.0.10")
+bazel_dep(name = "platforms", version = "1.0.0")
 bazel_dep(name = "protobuf", version = "24.4", repo_name = "com_google_protobuf")
 bazel_dep(name = "rules_cc", version = "0.0.17")
 bazel_dep(name = "rules_multirun", version = "0.9.0")
@@ -132,7 +132,7 @@ bazel_dep(name = "toolchains_llvm", version = "0.10.3")
 #       - rules_cc
 #       - rules_mypy
 #       - rules_python
-# - platforms
+# - platforms: https://registry.bazel.build/modules/platforms
 # - protobuf:
 #   - TODO(#91): Allow bumping this up to 26 or greater while avoiding segfault
 # - rules_cc
