--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -52,7 +52,7 @@ bazel_dep(name = "pico-sdk", version = "2.0.0")
 bazel_dep(name = "pigweed")
 bazel_dep(name = "platforms", version = "1.0.0")
 bazel_dep(name = "protobuf", version = "33.1", repo_name = "com_google_protobuf")
-bazel_dep(name = "rules_cc", version = "0.0.17")
+bazel_dep(name = "rules_cc", version = "0.2.14")
 bazel_dep(name = "rules_multirun", version = "0.9.0")
 bazel_dep(name = "rules_multitool", version = "1.9.0")
 bazel_dep(name = "rules_mypy", version = "0.38.0")
@@ -135,7 +135,7 @@ bazel_dep(name = "toolchains_llvm", version = "0.10.3")
 # - platforms: https://registry.bazel.build/modules/platforms
 # - protobuf: https://registry.bazel.build/modules/protobuf
 #   - TODO(#91): Allow bumping this up to 26 or greater while avoiding segfault
-# - rules_cc
+# - rules_cc: https://registry.bazel.build/modules/rules_cc
 # - rules_multirun
 # - rules_multitool
 # - rules_mypy
