--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -53,7 +53,7 @@ bazel_dep(name = "pigweed")
 bazel_dep(name = "platforms", version = "1.0.0")
 bazel_dep(name = "protobuf", version = "33.1", repo_name = "com_google_protobuf")
 bazel_dep(name = "rules_cc", version = "0.2.14")
-bazel_dep(name = "rules_multirun", version = "0.9.0")
+bazel_dep(name = "rules_multirun", version = "0.13.0")
 bazel_dep(name = "rules_multitool", version = "1.9.0")
 bazel_dep(name = "rules_mypy", version = "0.38.0")
 bazel_dep(name = "rules_oci", version = "2.2.6")
@@ -136,7 +136,7 @@ bazel_dep(name = "toolchains_llvm", version = "0.10.3")
 # - protobuf: https://registry.bazel.build/modules/protobuf
 #   - TODO(#91): Allow bumping this up to 26 or greater while avoiding segfault
 # - rules_cc: https://registry.bazel.build/modules/rules_cc
-# - rules_multirun
+# - rules_multirun: https://registry.bazel.build/modules/rules_multirun
 # - rules_multitool
 # - rules_mypy
 # - rules_oci
