--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -63,7 +63,7 @@ bazel_dep(name = "rules_python_gazelle_plugin", version = "1.7.0-rc4")
 bazel_dep(name = "rules_python", version = "1.7.0")
 bazel_dep(name = "rules_rust")
 bazel_dep(name = "rules_uv", version = "0.88.0")
-bazel_dep(name = "toolchains_llvm", version = "0.10.3")
+bazel_dep(name = "toolchains_llvm", version = "1.5.0")
 
 ##########################################
 # bazel_dep Notes
@@ -152,7 +152,7 @@ bazel_dep(name = "toolchains_llvm", version = "0.10.3")
 #   - See #55
 # - rules_rust: https://registry.bazel.build/modules/rules_rust
 # - rules_uv: https://registry.bazel.build/modules/rules_uv
-# - toolchains_llvm
+# - toolchains_llvm: https://registry.bazel.build/modules/toolchains_llvm
 
 # Considerations for the future
 #
