--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -132,6 +132,9 @@ bazel_dep(name = "toolchains_llvm", version = "1.5.0")
 #       - rules_cc
 #       - rules_mypy
 #       - rules_python
+#   - See
+#   https://cs.opensource.google/pigweed/quickstart/bazel/+/main:MODULE.bazel
+#   for recommendations on sub-dependencies
 # - platforms: https://registry.bazel.build/modules/platforms
 # - protobuf: https://registry.bazel.build/modules/protobuf
 #   - TODO(#91): Allow bumping this up to 26 or greater while avoiding segfault
