--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -34,15 +34,15 @@ module(
 # Reminder: When adding dependencies, update the Notes section below and keep
 # any overrides / configuration in their respective sections ordered alphabetically
 # [BCR](https://registry.bazel.build/)
-bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
-bazel_dep(name = "aspect_rules_js", version = "1.39.0")
-bazel_dep(name = "aspect_rules_lint", version = "1.0.3")
+bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
+bazel_dep(name = "aspect_rules_js", version = "2.8.2")
+bazel_dep(name = "aspect_rules_lint", version = "1.10.2")
 bazel_dep(name = "aspect_rules_py", version = "1.6.6")
-bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1")
-bazel_dep(name = "bazel_skylib", version = "1.7.1")
-bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
+bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2")
+bazel_dep(name = "bazel_skylib", version = "1.8.2")
+bazel_dep(name = "buildifier_prebuilt", version = "8.2.1")
 bazel_dep(name = "build_stack_rules_proto", version = "4.1.2")
-bazel_dep(name = "catch2", version = "3.6.0")
+bazel_dep(name = "catch2", version = "3.11.0")
 bazel_dep(name = "emboss", repo_name = "com_google_emboss")
 bazel_dep(name = "freertos", version = "10.5.1.bcr.2")
 bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
@@ -50,20 +50,20 @@ bazel_dep(name = "hedron_compile_commands")
 bazel_dep(name = "nanopb", version = "0.4.9.1", repo_name = "com_github_nanopb_nanopb")
 bazel_dep(name = "pico-sdk", version = "2.0.0")
 bazel_dep(name = "pigweed")
-bazel_dep(name = "platforms", version = "0.0.10")
-bazel_dep(name = "protobuf", version = "24.4", repo_name = "com_google_protobuf")
-bazel_dep(name = "rules_cc", version = "0.0.17")
-bazel_dep(name = "rules_multirun", version = "0.9.0")
+bazel_dep(name = "platforms", version = "1.0.0")
+bazel_dep(name = "protobuf", version = "33.1", repo_name = "com_google_protobuf")
+bazel_dep(name = "rules_cc", version = "0.2.14")
+bazel_dep(name = "rules_multirun", version = "0.13.0")
 bazel_dep(name = "rules_multitool", version = "1.9.0")
-bazel_dep(name = "rules_mypy", version = "0.38.0")
+bazel_dep(name = "rules_mypy", version = "0.40.0")
 bazel_dep(name = "rules_oci", version = "2.2.6")
 bazel_dep(name = "rules_platform", version = "0.1.0")
 bazel_dep(name = "rules_proto", version = "7.1.0")
 bazel_dep(name = "rules_python_gazelle_plugin", version = "1.7.0-rc4")
 bazel_dep(name = "rules_python", version = "1.7.0")
-bazel_dep(name = "rules_rust", version = "0.48.0")
-bazel_dep(name = "rules_uv", version = "0.45.0")
-bazel_dep(name = "toolchains_llvm", version = "0.10.3")
+bazel_dep(name = "rules_rust")
+bazel_dep(name = "rules_uv", version = "0.88.0")
+bazel_dep(name = "toolchains_llvm", version = "1.5.0")
 
 ##########################################
 # bazel_dep Notes
@@ -73,8 +73,8 @@ bazel_dep(name = "toolchains_llvm", version = "0.10.3")
 # order to keep them clean / immediately viewable)
 
 # Repo Notes:
-# - aspect_bazel_lib
-# - aspect_rules_js
+# - aspect_bazel_lib: https://registry.bazel.build/modules/aspect_bazel_lib
+# - aspect_rules_js: https://registry.bazel.build/modules/aspect_rules_js
 #   - NOTE: We don't really use/support JS in this repo, and if you need to
 #   you'll have some more config to do, but we register rules_js here so we can
 #   use it to pull a few javascript packages used for repo tooling, like
@@ -85,27 +85,28 @@ bazel_dep(name = "toolchains_llvm", version = "0.10.3")
 #      bazel_dep(name = "rules_nodejs", version = "5.8.2")
 #      node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
 #      node.toolchain(node_version = "16.14.2")
-# - aspect_rules_lint
+# - aspect_rules_lint: https://registry.bazel.build/modules/aspect_rules_lint
 #   - Next, follow the install instructions for
 #     - linting: https://github.com/aspect-build/rules_lint/blob/v1.0.3/docs/linting.md
 #     - formatting: https://github.com/aspect-build/rules_lint/blob/v1.0.3/docs/formatting.md
-# - aspect_rules_py
-# - bazel_skylib_gazelle_plugin
-# - bazel_skylib
+# - aspect_rules_py: https://registry.bazel.build/modules/aspect_rules_py
+# - bazel_skylib_gazelle_plugin: https://registry.bazel.build/modules/bazel_skylib_gazelle_plugin
+# - bazel_skylib: https://registry.bazel.build/modules/bazel_skylib
 #   - Bazel rule helpers, including testing
-# - buildifier_prebuilt
+# - buildifier_prebuilt:
+# https://registry.bazel.build/modules/buildifier_prebuilt
 #   - Set up hermetic Buildifier tools
 #   - This is helpful because the old version used an http_archive to fetch the buildtools
 #     WORKSPACE, but it is incompatible with bzlmod Go toolchains. Instead let's just use
 #     a prebuilt version.
-# - build_stack_rules_proto
-# - catch2
+# - build_stack_rules_proto: https://registry.bazel.build/modules/build_stack_rules_proto
+# - catch2: https://registry.bazel.build/modules/catch2
 #   - C++ Test framework
 #   - https://github.com/catchorg/Catch2
 #   - Consider adding listeners via https://github.com/catchorg/Catch2/blob/devel/docs/event-listeners.md
 #   - Consider the googletest alternative: https://google.github.io/googletest/
 #     - bazel_dep(name = "googletest", version = "1.15.2")
-# - emboss
+# - emboss: https://pigweed.googlesource.com/third_party/github/google/emboss
 # - freertos
 # - gazelle: https://github.com/bazel-contrib/bazel-gazelle
 # - hedron_compile_commands
@@ -131,24 +132,29 @@ bazel_dep(name = "toolchains_llvm", version = "0.10.3")
 #       - rules_cc
 #       - rules_mypy
 #       - rules_python
-# - platforms
-# - protobuf:
-#   - TODO(#91): Allow bumping this up to 26 or greater while avoiding segfault
-# - rules_cc
-# - rules_multirun
-# - rules_multitool
-# - rules_mypy
-# - rules_oci
-# - rules_platform
+#   - See
+#   https://cs.opensource.google/pigweed/quickstart/bazel/+/main:MODULE.bazel
+#   for recommendations on sub-dependencies
+# - platforms: https://registry.bazel.build/modules/platforms
+# - protobuf: https://registry.bazel.build/modules/protobuf
+# - rules_cc: https://registry.bazel.build/modules/rules_cc
+# - rules_multirun: https://registry.bazel.build/modules/rules_multirun
+#   - allow parallel invocations (see lint.sh)
+# - rules_multitool: https://registry.bazel.build/modules/rules_multitool
+# - rules_mypy: https://registry.bazel.build/modules/rules_mypy
+# - rules_oci: https://registry.bazel.build/modules/rules_oci
+# - rules_platform: https://registry.bazel.build/modules/rules_platform
 #   - Allow platform transitions
-# - rules_proto: https://github.com/stackb/rules_proto
-# - rules_python_gazelle_plugin
+# - rules_proto: https://registry.bazel.build/modules/rules_proto
+#   - https://github.com/stackb/rules_proto
+# - rules_python_gazelle_plugin: https://registry.bazel.build/modules/rules_python_gazelle_plugin
 #   - Note this is a sub-directory of the rules_python repo
-# - rules_python: https://github.com/bazelbuild/rules_python
+# - rules_python: https://registry.bazel.build/modules/rules_python
+#   - https://github.com/bazelbuild/rules_python
 #   - See #55
-# - rules_rust
-# - rules_uv
-# - toolchains_llvm
+# - rules_rust: https://registry.bazel.build/modules/rules_rust
+# - rules_uv: https://registry.bazel.build/modules/rules_uv
+# - toolchains_llvm: https://registry.bazel.build/modules/toolchains_llvm
 
 # Considerations for the future
 #
