--- a/apps/code_metrics/BUILD
+++ b/apps/code_metrics/BUILD
@@ -1,4 +1,6 @@
-load("//bzl:py.bzl", "py_binary")
+load("//bzl:py.bzl", "py_binary", "py_library")
+
+package(default_visibility = ["//visibility:private"])
 
 py_binary(
     name = "main",
@@ -10,4 +12,16 @@ py_binary(
     ],
 )
 
-package(default_visibility = ["//visibility:private"])
+py_library(
+    name = "db",
+    srcs = ["db.py"],
+    visibility = ["//:__subpackages__"],
+    deps = ["@pip//sqlalchemy"],
+)
+
+py_library(
+    name = "models",
+    srcs = ["models.py"],
+    visibility = ["//:__subpackages__"],
+    deps = ["@pip//sqlalchemy"],
+)
