--- a/examples/pigweed/modules/blinky/BUILD
+++ b/examples/pigweed/modules/blinky/BUILD
@@ -12,6 +12,8 @@
 # License for the specific language governing permissions and limitations under
 # the License.
 
+load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
+
 # Don't autogenerate any protos here
 # gazelle:ignore
 load(
