--- a/system/BUILD
+++ b/system/BUILD
@@ -1,4 +1,4 @@
-load("@rules_cc//cc:cc_library.bzl", "cc_library")
+load("//bzl:cc.bzl", "cc_library")
 
 # gazelle:default_visibility //visibility:public
 package(default_visibility = ["//visibility:public"])
