--- a/apps/code_metrics/BUILD
+++ b/apps/code_metrics/BUILD
@@ -1,4 +1,4 @@
-load("//bzl:py.bzl", "py_binary", "py_library")
+load("//bzl:py.bzl", "py_binary")
 
 package(default_visibility = ["//visibility:private"])
 
