--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -82,28 +82,21 @@ jobs:
           lcov --list coverage.dat
           # Generate HTML
           genhtml --legend --highlight --branch-coverage --output genhtml coverage.dat
-      # See https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/storing-workflow-data-as-artifacts
-      - name: Archive coverage.dat
-        uses: actions/upload-artifact@v4
-        with:
-          name: code-coverage-report
-          path: coverage.dat
-      - name: Archive genhtml
-        uses: actions/upload-artifact@v4
-        with:
-          name: code-coverage-html
-          path: genhtml
       - name: Collect Stats
         id: collect_stats
         env:
           DB_PASSWORD: ${{ secrets.METRICS_DB_PASSWORD }}
         run: |
           bazel run //apps/code_metrics:main -- --pr_comment=/tmp/collect_stats_pr_diff.md --archive=/tmp/collect_stats_archive.json
-      - name: Archive stats
+      # See https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/storing-workflow-data-as-artifacts
+      - name: Archive Dev Products
         uses: actions/upload-artifact@v4
         with:
-          name: collected_stats
-          path: /tmp/collect_stats_archive.json
+          name: dev_products
+          path: |
+            coverage.dat
+            genhtml
+            /tmp/collect_stats_archive.json
       - name: Comment PR
         # https://github.com/thollander/actions-comment-pull-request
         uses: thollander/actions-comment-pull-request@v3
