Experiment with Metrics Tracking and Pushing (#241)
Changes

- Create new app: `code_metrics`
- Add Stats monitoring to the build-and-test workflow
  - collects them
  - archives them to github
  - comments in the PR
  - Uploads to a database for later usage
- Update `cc_library`, `cc_binary` in various BUILD files

Dependencies

- Adds `rule_shell` to MODULE.bazel
- Install `libtinfo5` in `buildbuddy` now
- Add psycopg2-binary and sqlalchemy to `requirements.in`
- Using aiven to host an
[example PostgreSQL
DB](https://console.aiven.io/account/a580fbe398bb/project/mchristen96-4420/services/pg-1f58963f/settings)

Resources

- https://interrupt.memfault.com/blog/best-firmware-size-tools
-
[SQLalchemy](https://docs.sqlalchemy.org/en/20/orm/session_basics.html)

--- a/apps/sbr/BUILD
+++ b/apps/sbr/BUILD
@@ -1,5 +1,7 @@
 load("@pigweed//targets/host_device_simulator:transition.bzl", "host_device_simulator_binary")
 load("@pigweed//targets/rp2040:flash.bzl", "flash_rp2040")
+load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
+load("//bzl:cc.bzl", "cc_size")
 load("//third_party/pigweed/tools:tools.bzl", "device_console", "host_console")
 load(":binary.bzl", "rp2040_binary", "rp2350_binary")
 
@@ -45,6 +47,12 @@ rp2040_binary(
     binary = ":sbr",
 )
 
+cc_size(
+    max_flash = 261120,  # 255 Kb
+    max_ram = 65536,  # 64 Kb
+    target = ":rp2040_sbr.elf",
+)
+
 flash_rp2040(
     name = "flash_rp2040",
     rp2040_binary = "rp2040_sbr.elf",
@@ -59,6 +67,12 @@ device_console(
 rp2350_binary(
     name = "rp2350_sbr.elf",
     binary = ":sbr",
+)
+
+cc_size(
+    max_flash = 261120,  # 255 Kb
+    max_ram = 65536,  # 64 Kb
+    target = ":rp2350_sbr.elf",
 )
 
 # Note: Despite the name, the rule works for the 2350.
