--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -12,6 +12,14 @@ jobs:
     steps:
       - run: echo "The job was triggered by a ${{ github.event_name }} event, running on ${{ runner.os }}, ${{ github.ref }} @ ${{ github.repository }}."
       - uses: actions/checkout@v4
+        with:
+          # Enable getting history of git for stats collection
+          fetch-depth: 0
+          # Minimize clone traffic while still getting history
+          # - https://stackoverflow.com/a/75966904
+          filter: 'tree:0'
+      - run: |
+          git fetch origin ${{ github.base_ref }}
       - name: Free Disk Space (Ubuntu)
         uses: jlumbroso/free-disk-space@v1.3.1
         with:
@@ -74,17 +82,29 @@ jobs:
           lcov --list coverage.dat
           # Generate HTML
           genhtml --legend --highlight --branch-coverage --output genhtml coverage.dat
+      - name: Collect Stats
+        id: collect_stats
+        env:
+          DB_PASSWORD: ${{ secrets.METRICS_DB_PASSWORD }}
+        run: |
+          bazel run //apps/code_metrics:main -- --pr_comment=/tmp/collect_stats_pr_diff.md --archive=/tmp/collect_stats_archive.json
       # See https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/storing-workflow-data-as-artifacts
-      - name: Archive coverage.dat
+      - name: Archive Dev Products
         uses: actions/upload-artifact@v4
         with:
-          name: code-coverage-report
-          path: coverage.dat
-      - name: Archive genhtml
-        uses: actions/upload-artifact@v4
+          name: dev_products
+          path: |
+            coverage.dat
+            genhtml
+            /tmp/collect_stats_archive.json
+      - name: Comment PR
+        # https://github.com/thollander/actions-comment-pull-request
+        uses: thollander/actions-comment-pull-request@v3
         with:
-          name: code-coverage-html
-          path: genhtml
+          file-path: /tmp/collect_stats_pr_diff.md
+          # Use a comment-tag to create a "sticky" comment that updates on subsequent runs
+          comment-tag: automated-build-status
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
