--- a/hw_services/sbr/BUILD
+++ b/hw_services/sbr/BUILD
@@ -5,6 +5,7 @@ load(
     "nanopb_rpc_proto_library",
 )
 load("@rules_proto//proto:defs.bzl", "proto_library")
+load("//bzl:cc.bzl", "cc_library")
 load("//bzl:py.bzl", "grpc_py_library", "proto_py_library")
 
 package(default_visibility = ["//visibility:private"])
