Experiment with Metrics Tracking and Pushing (#241)
Changes

- Create new app: `code_metrics`
- Add Stats monitoring to the build-and-test workflow
  - collects them
  - archives them to github
  - comments in the PR
  - Uploads to a database for later usage
- Update `cc_library`, `cc_binary` in various BUILD files

Dependencies

- Adds `rule_shell` to MODULE.bazel
- Install `libtinfo5` in `buildbuddy` now
- Add psycopg2-binary and sqlalchemy to `requirements.in`
- Using aiven to host an
[example PostgreSQL
DB](https://console.aiven.io/account/a580fbe398bb/project/mchristen96-4420/services/pg-1f58963f/settings)

Resources

- https://interrupt.memfault.com/blog/best-firmware-size-tools
-
[SQLalchemy](https://docs.sqlalchemy.org/en/20/orm/session_basics.html)

--- a/requirements.in
+++ b/requirements.in
@@ -41,6 +41,8 @@ six
 # Install so we can easily install a wheel into a virtualenv
 pip
 protobuf
+# Postgresql interactions
+psycopg2-binary
 # Validation & serialization
 pydantic
 # largely for development
@@ -70,6 +72,8 @@ sphinxcontrib-mermaid
 # Documentation
 sphinxext-opengraph
 sphinxext-rediraffe
+# Database Management
+sqlalchemy
 # Make nice-looking table output
 tabulate
 # Convenient backend for openhtf; https://www.tofupilot.com/
