--- a/utils/BUILD
+++ b/utils/BUILD
@@ -6,7 +6,10 @@ py_library(
     name = "graph_algorithms",
     srcs = ["graph_algorithms.py"],
     visibility = ["//:__subpackages__"],
-    deps = ["@pip//networkx"],
+    deps = [
+        "@pip//networkx",
+        "@pip//tqdm",
+    ],
 )
 
 py_test(
@@ -24,8 +27,10 @@ py_binary(
     visibility = ["//:__subpackages__"],
     deps = [
         "//third_party/bazel/proto:build_event_stream_py_library",
+        "//third_party/bazel/proto:spawn_py_library",
         "//third_party/delimited_protobuf",
         "@pip//tabulate",
+        "@pip//zstandard",
     ],
 )
 
