--- a/.gitignore
+++ b/.gitignore
@@ -64,12 +64,16 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+# Obsidian
+docs/.obsidian/workspace.json
 
 # PyBuilder
 target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+# jupytext preserves these with their paired .py notebooks
+*.ipynb
 
 # pyenv
 .python-version
