--- a/requirements.in
+++ b/requirements.in
@@ -16,17 +16,25 @@ isort
 # https://jupytext.readthedocs.io/en/stable/index.html
 # Source control jupyter notebooks by pairing with an ingnored .ipynb file.
 jupytext
+# XXX: jupyterlab explicitly / jupyterlab-vim
 # - generates links with raw urls, eg) www.example.com
 linkify-it-py
 mypy
 myst-parser
 # Analyze graphs easily https://networkx.org/documentation/stable/index.html
 networkx[default]
-# XXX: Required by openhtf's requirements of tornado
+# Type-hint networkx
+types-networkx
 notebook
+# Needed for pandas, etc.
+numpy
 # Tool for running hardware-style tests; https://www.openhtf.com/
 openhtf
-panel
+panel>=1.6.1
+# spreadsheets in python ;)
+# TODO: Try out pandera, but I got hung up on numpy usage
+pandas
+pandas-stubs
 pygraphviz
 # Undeclared dependency of openhtf
 six
@@ -35,11 +43,15 @@ pip
 protobuf
 # Postgresql interactions
 psycopg2-binary
+# Validation & serialization
+pydantic
 # largely for development
 # https://github.com/pytest-dev/pytest/issues/12592#issuecomment-2515100428
 # introduced an issue with files named the same as their parent modules from
 # properly getting imported
 pytest<8.3.4
+# Yaml input/output (I hate it, but ...)
+pyyaml
 # https://github.com/bazelbuild/bazel/issues/4327
 setuptools<71
 # Process-based Discrete Event Simulation
@@ -67,3 +79,5 @@ tabulate
 # Convenient backend for openhtf; https://www.tofupilot.com/
 tofupilot
 types-protobuf
+# zstd compression
+zstandard
