--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -38,6 +38,7 @@ bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
 bazel_dep(name = "aspect_rules_js", version = "2.8.2")
 bazel_dep(name = "aspect_rules_lint", version = "1.10.2")
 bazel_dep(name = "aspect_rules_py", version = "1.6.6")
+bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
 bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2")
 bazel_dep(name = "bazel_skylib", version = "1.8.2")
 bazel_dep(name = "buildifier_prebuilt", version = "8.2.1")
@@ -91,6 +92,8 @@ bazel_dep(name = "toolchains_llvm", version = "1.5.0")
 #     - linting: https://github.com/aspect-build/rules_lint/blob/v1.0.3/docs/linting.md
 #     - formatting: https://github.com/aspect-build/rules_lint/blob/v1.0.3/docs/formatting.md
 # - aspect_rules_py: https://registry.bazel.build/modules/aspect_rules_py
+# - bazel_env: https://registry.bazel.build/modules/bazel_env.bzl
+#   - recommended approach for tools in https://blog.aspect.build/bazel-devenv
 # - bazel_skylib_gazelle_plugin: https://registry.bazel.build/modules/bazel_skylib_gazelle_plugin
 # - bazel_skylib: https://registry.bazel.build/modules/bazel_skylib
 #   - Bazel rule helpers, including testing
