Enhance tools usage: Update/Add Tools and Support bazel_env/direnv (#245)
Follow these for extending tool support:
https://blog.aspect.build/bazel-devenv and
https://blog.aspect.build/run-tools-installed-by-bazel

Utilize direnv as well as bazel_env to expose some of these tools on
`$PATH` as well.

Multitool changes
- aspect
- gephi
- multitool

- [x] Checkout aspect blog for any better alternatives.

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -1,5 +1,7 @@
+load("@bazel_env.bzl", "bazel_env")
 load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
 load("@build_stack_rules_proto//rules/cc:proto_cc_library.bzl", "proto_cc_library")
+load("@multitool//:tools.bzl", MULTITOOL_TOOLS = "TOOLS")
 load("@pip//:requirements.bzl", "requirement")  # '@pip' must match configured pip hub_name
 load("@rules_multirun//:defs.bzl", "command", "multirun")
 load("@rules_mypy//mypy:mypy.bzl", "mypy_cli")
@@ -166,4 +168,18 @@ proto_py_library(
     srcs = ["git_pb2.py"],
     visibility = ["//visibility:public"],
     deps = ["@com_google_protobuf//:protobuf_python"],
+)
+
+# Rerun `bazel run //tools:bazel_env` if you modify this target
+bazel_env(
+    name = "bazel_env",
+    toolchains = {
+        "python": "@rules_python//python:current_py_toolchain",
+    },
+    tools = {
+        "buildifier": "@buildifier_prebuilt//:buildifier",
+        "buildozer": "@buildifier_prebuilt//:buildozer",
+        "format": "//tools/format:format",
+        "python": "$(PYTHON3)",
+    } | MULTITOOL_TOOLS,
 )
