--- a/tools/lint/BUILD
+++ b/tools/lint/BUILD
@@ -2,8 +2,10 @@ load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
 
 package(default_visibility = ["//visibility:private"])
 
+# Use Pigweed's LLVM toolchain (saves ~6GB vs toolchains_llvm). See #220.
+# Note: Using canonical name since Pigweed's llvm_toolchain isn't directly visible.
 native_binary(
     name = "clang_tidy",
-    src = "@llvm_toolchain_llvm//:bin/clang-tidy",
+    src = "@@pigweed++_repo_rules6+llvm_toolchain//:bin/clang-tidy",
     out = "clang_tidy",
 )
